--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,82 @@
     transform: rotate(360deg);
   }
 }
+
+/* Login form css - start */
+/* Start User form */
+.firstLine{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+
+input.form-control {
+  border-radius: 0 !important;
+}
+
+/* Hide default icon "eye" of Edge/IE */
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none;
+}
+
+/* Hide default icon "eye" of Chrome */
+input[type="password"]::-webkit-textfield-decoration-container {
+  display: none;
+}
+
+
+/* Start Register form */
+.registerForm{
+  border: solid rgb(247, 245, 245);
+  background-color: rgb(247, 245, 245);
+  padding: 10px;
+}
+.registerButton{
+  border: rgb(239, 164, 164);
+  width: 100%;
+  background-color: lightskyblue;
+}
+
+/* Start login form */
+.email_lg, .phone_lg{
+  border: solid lightskyblue;
+  width: 40%;
+  text-align: center;
+  background-color: white;
+  border-width: 1px;
+}
+
+.email_lg1, .phone_lg1{
+  border: solid rgb(227, 239, 247);
+  background-color: rgb(227, 239, 247);
+}
+
+
+
+.email_lg:visited{
+  background-color: rgb(145, 70, 210);
+}
+
+
+.email_edit, .phone_edit{
+  text-decoration: none;
+  color: lightskyblue;
+}
+
+/* Login form css - end */
+
+/* Nar bar - start */
+.navCustom{
+  background-color: lightskyblue;
+}
+
+.nav-link.active{
+  color: navy !important;
+  font-weight: bold;
+  border-bottom: 2px solid white;
+  padding-bottom: 2px;
+  transition: 0.3s;
+}
+/* Nar bar - end */
