Forth commit/duyen

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -104,7 +104,7 @@ input[type="password"]::-webkit-textfield-decoration-container {
 
 /* Nar bar - start */
 .navCustom{
-  background-color: lightskyblue;
+  background-color: #13b5e0;
 }
 
 .nav-link.active{
